Version 1.0 released on 2008-09-30

Version 1.1 released on 2008-12-19
    Updated PMD to version 4.2.4 (and plugins)
    Updated FindBugs to version 1.3.6
    Added FB-Contrib
    Updated PHP to 5.2.8
    Minor bug fixes in PMD and FindBugs plugin (cross-platform)
    Fixed line endings for Unix and Windows
    Added new plugins

Version 1.2 released on 2009-01-16
    Enhanced Grep plugin - multiple regex modifiers allowed
    Ability to ignore certain findings
    Added external tool Pixy
    Added plugins for PHP
    Added plugins for C++

Version 1.3 released on 2009-03-15
    Many bug fixes - thank you to zaph, jack, and jen140
    Added external tool JavaScript Lint - thank you to Nick Tulett for the idea
    Added SQL Report type (SQLite)
    Added Pre-Processing capability to Grep plugin
    Updated PHP to 5.2.9 (Windows)
    Updated PMD to 4.2.5
    Updated FindBugs to version 1.3.7
    Updated FB-Contrib to version 3.8.0
    Added plugins for ColdFusion
    