@@ -1,9 +1,18 @@
 Requirements:
     Yasca
-	* PHP 5 (+ CLI)
+	    * Windows - none
+        * Linux - PHP 5 (+ CLI)
     Pixy
-	* Sun Java 1.6+
+	    * Sun Java 1.6+
     FindBugs
-	* Sun Java 1.5+
+	    * Sun Java 1.5+
+        * Linux - php-xml
     PMD
-	* Sun Java 1.4+
+   	    * Sun Java 1.4+
+        * Linux - php-xml
+    JavaScript Lint
+        * Windows - none
+        * Linux - wine
+    JLint
+        * Windows - none
+        * Linux - wine
