@@ -23,10 +23,22 @@ class Plugin_JLint extends Plugin {
         $dir = $yasca->options['dir'];
         $jlint_results = array();
         
-        $yasca->log_message("Forking external process (JLint)...", E_USER_WARNING);
-        exec( "resources\\utility\\jlint.exe -source " . escapeshellarg($dir) . " " . escapeshellarg($dir), $jlint_results);
-        $yasca->log_message("External process completed...", E_USER_WARNING);
-        
+        // Try to execute using native binary of via wine, if possible
+        if (getSystemOS() == "Windows") {
+            $yasca->log_message("Forking external process (JLint)...", E_USER_WARNING);
+            exec( "resources\\utility\\jlint.exe -source " . escapeshellarg($dir) . " " . escapeshellarg($dir), $jlint_results);
+            $yasca->log_message("External process completed...", E_USER_WARNING);
+        } else if (getSystemOS() == "Linux") {
+            if (preg_match("/no wine in/", `which wine`)) {
+                $yasca->log_message("No JLint executable and wine not found.", E_ALL);
+                return;
+            } else {
+                $yasca->log_message("Forking external process (JLint)...", E_USER_WARNING);
+                exec( "wine resources/utility/jlint.exe -source " . escapeshellarg($dir) . " " . escapeshellarg($dir), $jlint_results);
+                $yasca->log_message("External process completed...", E_USER_WARNING);
+            }
+        }
+
         if ($yasca->options['debug']) 
             $yasca->log_message("JLint returned: " . implode("\r\n", $jlint_results), E_ALL);
         
